Added test for samples and fixed some schemas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.18.0)
 
 project(MAS_tests)
 
@@ -25,17 +25,19 @@ FetchContent_MakeAvailable(UnitTest++ json json-schema-validator)
 
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
 
+find_program(NAMES quicktype REQUIRED)
+
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/MAS")
 
 add_custom_command(
-  OUTPUT "${CMAKE_BINARY_DIR}/MAS/Core.cpp"
-  COMMAND quicktype -s schema ../schemas/core.json -S ../schemas/utils.json -S ../schemas/core/gap.json -S ../schemas/core/shape.json -S ../schemas/core/material.json -S ../schemas/insulation/material.json -S ../schemas/insulation/wireCoating.json -S schemas/core/bobbin.json -o MAS/Core.cpp --namespace OpenMagnetics --source-style multi-source --type-style pascal-case --member-style underscore-case --enumerator-style upper-underscore-case --no-boost
-  VERBATIM)
+  OUTPUT "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.cpp"
+  COMMAND quicktype -s schema ../schemas/core.json -S ../schemas/utils.json -S ../schemas/core/gap.json -S ../schemas/core/shape.json -S ../schemas/core/material.json -S ../schemas/insulation/material.json -S ../schemas/insulation/wireCoating.json -S ../schemas/core/bobbin.json -o MAS/CoreTemplate.cpp --namespace OpenMagnetics --source-style multi-source --type-style pascal-case --member-style underscore-case --enumerator-style upper-underscore-case --no-boost
+  USES_TERMINAL)
 include_directories("${CMAKE_BINARY_DIR}/_deps/unittest++-src/UnitTest++/")
 include_directories("${CMAKE_BINARY_DIR}/MAS/")
 
-
-
+add_custom_target(run ALL
+    DEPENDS "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.cpp")
 
 file(GLOB MAS_sources
     "tests/*.cpp")
