Started COre.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,17 +30,18 @@ find_program(NAMES quicktype REQUIRED)
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/MAS")
 
 add_custom_command(
-  OUTPUT "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.cpp"
-  COMMAND quicktype -s schema ../schemas/core.json -S ../schemas/utils.json -S ../schemas/core/gap.json -S ../schemas/core/shape.json -S ../schemas/core/material.json -S ../schemas/insulation/material.json -S ../schemas/insulation/wireCoating.json -S ../schemas/core/bobbin.json -o MAS/CoreTemplate.cpp --namespace OpenMagnetics --source-style multi-source --type-style pascal-case --member-style underscore-case --enumerator-style upper-underscore-case --no-boost
+  OUTPUT "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.hpp"
+  COMMAND quicktype -l c++ -s schema ../schemas/core.json -S ../schemas/utils.json -S ../schemas/core/gap.json -S ../schemas/core/shape.json -S ../schemas/core/material.json -S ../schemas/insulation/material.json -S ../schemas/insulation/wireCoating.json -S ../schemas/core/bobbin.json -o MAS/CoreTemplate.hpp --namespace OpenMagnetics --source-style single-source --type-style pascal-case --member-style underscore-case --enumerator-style upper-underscore-case --no-boost
   USES_TERMINAL)
 include_directories("${CMAKE_BINARY_DIR}/_deps/unittest++-src/UnitTest++/")
+include_directories("${CMAKE_BINARY_DIR}/_deps/json-src/include/nlohmann/")
 include_directories("${CMAKE_BINARY_DIR}/MAS/")
 
 add_custom_target(run ALL
-    DEPENDS "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.cpp")
+    DEPENDS "${CMAKE_BINARY_DIR}/MAS/CoreTemplate.hpp")
 
 file(GLOB MAS_sources
-    "tests/*.cpp")
+    "src/*.cpp")
 
 add_executable(MAS_tests ${MAS_sources})
 target_link_libraries(MAS_tests nlohmann_json::nlohmann_json nlohmann_json_schema_validator UnitTest++)
