--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-deprecated-declarations -Wno-unused-parameter -Wno-switch")
 
+option(BUILD_SHARED_LIBS      "Build tests"    ON)
 option(BUILD_TESTS      "Build tests"    OFF)
 option(BUILD_EXAMPLES   "Build examples" OFF)
 option(UTPP_INCLUDE_TESTS_IN_BUILD   "Build tests" OFF)
@@ -20,15 +21,11 @@ FetchContent_Declare(UnitTest++
 
 FetchContent_Declare(json
         GIT_REPOSITORY https://github.com/nlohmann/json/
-        GIT_TAG  tags/v3.10.0)
+        GIT_TAG  tags/v3.11.2)
 
 FetchContent_Declare(json-schema-validator
         GIT_REPOSITORY https://github.com/pboettch/json-schema-validator.git
         GIT_TAG  tags/2.1.0)
-
-FetchContent_Declare(magic-enum
-        GIT_REPOSITORY https://github.com/Neargye/magic_enum
-        GIT_TAG  tags/v0.8.1)
 
 FetchContent_MakeAvailable(UnitTest++ json json-schema-validator magic-enum)
 
